k8s/alertmanager/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    gethomepage.dev/href: 'https://alertmanager.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: alertmanager
    gethomepage.dev/group: Other
    gethomepage.dev/icon: alertmanager
    gethomepage.dev/name: Alertmanager
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia-service.default.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.durbin.casa?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
spec:
  ingressClassName: internal
  tls:
    - hosts: [&host alertmanager.durbin.casa]
      secretName: durbin-casa-wildcard-cert
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
